@@ -2,6 +2,7 @@
 v3.0.3-git
 ----------
 
+[gwr] Avoid including the owner name into the default share (Kolab backend).
 [mjr] Fix removeUserData implementation.
 
 
